--- a/gomod2nix.toml
+++ b/gomod2nix.toml
@@ -31,6 +31,9 @@ schema = 3
   [mod."github.com/bodgit/windows"]
     version = "v1.0.1"
     hash = "sha256-GSpAGboli54A5wDMpDEdZDYh55o1Zs8dZzFIf7hYdMY="
+  [mod."github.com/clipperhouse/uax29/v2"]
+    version = "v2.2.0"
+    hash = "sha256-BtyMi0Ul1CGY8miZDbsUWT9iW81UAn7CH/vAR4/S5vE="
   [mod."github.com/dlclark/regexp2"]
     version = "v1.11.5"
     hash = "sha256-jN5+2ED+YbIoPIuyJ4Ou5pqJb2w1uNKzp5yTjKY6rEQ="
@@ -65,8 +68,8 @@ schema = 3
     version = "v0.0.20"
     hash = "sha256-qhw9hWtU5wnyFyuMbKx+7RB8ckQaFQ8D+8GKPkN3HHQ="
   [mod."github.com/mattn/go-runewidth"]
-    version = "v0.0.16"
-    hash = "sha256-NC+ntvwIpqDNmXb7aixcg09il80ygq6JAnW0Gb5b/DQ="
+    version = "v0.0.19"
+    hash = "sha256-GpnbKplhX410Q/eIdknvWbYZgdav1keN+7wNUeOSMHE="
   [mod."github.com/mholt/archives"]
     version = "v0.1.4"
     hash = "sha256-S7aXxuVuRGA1GMSJZi0bJExX4cFMIfcmjAwef+U8n+U="
@@ -77,17 +80,14 @@ schema = 3
     version = "v1.0.1"
     hash = "sha256-dovSuYFYdBiivLCsU+F8Ogm2n86sesLWXMmBFo4gGw0="
   [mod."github.com/nwaples/rardecode/v2"]
-    version = "v2.1.1"
-    hash = "sha256-fJnCAcg/fv53dIMmhXWVs/V8IARS/HXNduTYMZZ+Q4c="
+    version = "v2.2.0"
+    hash = "sha256-so72UXNqM9w/CHau9M9evidHMeQPWAMdjVhEhXCGGXQ="
   [mod."github.com/nwidger/jsoncolor"]
     version = "v0.3.2"
     hash = "sha256-ibwPUPCLaBHKRYo93eaPlqlRFB2MW8f/XlImBkg2q2c="
   [mod."github.com/pierrec/lz4/v4"]
     version = "v4.1.22"
     hash = "sha256-mxO2jXM6O2yzZjkJeck+C8ncLZs/5EGoMQU1yQh/row="
-  [mod."github.com/rivo/uniseg"]
-    version = "v0.4.7"
-    hash = "sha256-rDcdNYH6ZD8KouyyiZCUEy8JrjOQoAkxHBhugrfHjFo="
   [mod."github.com/sirupsen/logrus"]
     version = "v1.9.3"
     hash = "sha256-EnxsWdEUPYid+aZ9H4/iMTs1XMvCLbXZRDyvj89Ebms="
@@ -104,11 +104,11 @@ schema = 3
     version = "v0.0.0-20230225012048-214862532bf5"
     hash = "sha256-8y7krSESdxZfxTzo16EDqmF8USRzGmLPYr3iKuVYzzE="
   [mod."golang.org/x/sys"]
-    version = "v0.36.0"
-    hash = "sha256-9h4SHGnlJzmTENUp6226hC8fQ73QrQC3D85NNMxLuXg="
+    version = "v0.37.0"
+    hash = "sha256-5aT0xP02sW1o9sfJHtWoGGNVYDdwb9FyiX/n6RAlzPo="
   [mod."golang.org/x/term"]
-    version = "v0.35.0"
-    hash = "sha256-z3DqFKX0MJv7eloHlMwL96m5tmTFyGL1cD5Zh2ZQJpE="
+    version = "v0.36.0"
+    hash = "sha256-5YLOE1v+5zEXG62rGrJKXyuDM/ylDnJQW/hLwbMLrY8="
   [mod."golang.org/x/text"]
-    version = "v0.29.0"
-    hash = "sha256-2cWBtJje+Yc+AnSgCANqBlIwnOMZEGkpQ2cFI45VfLI="
+    version = "v0.30.0"
+    hash = "sha256-VPT1Y2zzgdk+Q3Gx8hdwKdxbVh0/Zn/HwDpILCW3ZNA="
